--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,8 +17,8 @@
           
         </div>
         <div class="form-input">
-          <label for="password">Password</label>
-          <input type="password" id="password">
+          <label for="password">Words:</label>
+          <input type="text" id="password">
         </div>
         
         <div class="form-input">
